Add Gear S2 firmware
Change-Id: I7156150375ade5050ea806133347e7c0f9dffe15
Signed-off-by: Taejin Woo <tt.woo@samsung.com>

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -2,3 +2,7 @@
 INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bt-dev-end.sh DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
 INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bt-dev-start.sh DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
 INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bt-set-addr.sh DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
+
+#IF (TIZEN_WEARABLE)
+INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bt-dev-start-exynos3250.sh DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
+#ENDIF (TIZEN_WEARABLE)
