--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,7 +4,10 @@ PROJECT(bcmtool C)
 SET(SRCS_4330B1 bcmtool_4330b1.c)
 SET(BCMTOOL_4330B1 ${PROJECT_NAME}_4330b1)
 
+SET(SRCS_4343W bcmtool_4343w.c)
+
 SET(SRCS_4358A1 bcmtool_4358a1.c)
+SET(BCMTOOL_4343W ${PROJECT_NAME}_4343w)
 SET(BCMTOOL_4358A1 ${PROJECT_NAME}_4358a1)
 
 SET(PREFIX ${CMAKE_INSTALL_PREFIX})
@@ -20,10 +23,13 @@ ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
 ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
 
 ADD_EXECUTABLE(${BCMTOOL_4330B1} ${SRCS_4330B1})
+ADD_EXECUTABLE(${BCMTOOL_4343W} ${SRCS_4343W})
 TARGET_LINK_LIBRARIES(${BCMTOOL_4330B1} ${package_LDFLAGS})
 
 ADD_EXECUTABLE(${BCMTOOL_4358A1} ${SRCS_4358A1})
+TARGET_LINK_LIBRARIES(${BCMTOOL_4343W} ${package_LDFLAGS})
 TARGET_LINK_LIBRARIES(${BCMTOOL_4358A1} ${package_LDFLAGS})
 
 # install binary file
+INSTALL(TARGETS ${BCMTOOL_4343W} DESTINATION ${PLUGIN_INSTALL_PREFIX}/bin)
 INSTALL(TARGETS ${BCMTOOL_4358A1} DESTINATION ${PLUGIN_INSTALL_PREFIX}/bin)
