Add the firmware and broadcom's tool for Artik
Change-Id: I27e107a261aed30a394ccd8838540845a2e0d5b0
Signed-off-by: Taejin Woo <tt.woo@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,14 @@ ENDFOREACH(flag)
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
 
+IF (TIZEN_MOBILE)
 ADD_SUBDIRECTORY(set-address)
+ELSE ()
+IF (TIZEN_WEARABLE)
+ADD_SUBDIRECTORY(set-address)
+ELSE ()
+ENDIF (TIZEN_WEARABLE)
+ENDIF (TIZEN_MOBILE)
 ADD_SUBDIRECTORY(tools)
 ADD_SUBDIRECTORY(firmware)
 ADD_SUBDIRECTORY(scripts)
