--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -5,4 +5,5 @@ INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bt-set-addr.sh DESTINATION ${PLUGIN
 
 #IF (TIZEN_WEARABLE)
 INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bt-dev-start-exynos3250.sh DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
+INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bt-dev-start-artik.sh DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
 #ENDIF (TIZEN_WEARABLE)
