Add the firmware and broadcom's tool for Artik
Change-Id: I27e107a261aed30a394ccd8838540845a2e0d5b0
Signed-off-by: Taejin Woo <tt.woo@samsung.com>

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -1,6 +1,8 @@
 # install firmware
 #INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BT_FW_BCM4330B1_002.001.003.0221.0265.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
 INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BT_FW_BCM4358A1_001.002.005.0032.0066.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
+INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BCM4354_003.001.012.0353.0745_Samsung_Artik_ORC.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
+INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/artik_bcmtool/brcm_patchram_plus DESTINATION ${PLUGIN_INSTALL_PREFIX}/bin)
 
 # Gear S2
 INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4343w/BCM4343A1_001.002.009.0035.0096_ORC_Orbis_WC1-S.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
