--- a/project.config
+++ b/project.config
@@ -1,2 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_network_and_connectivity/bluetooth
+[project]
+	description = "Domain: Network & Connectivity / Bluetooth;"
